# epic-kitchens-zsl

./: .gitignore  README.md  pyproject.toml
analysis/: audio_analysis.py  similarity_bert.py
processing/: aggregate_text_embeddings.py  define_action_splits.py  extract_ast.py  extract_cnn14_embeddings.py  extract_sbert.py  extract_sbert_embeddings.py  extract_segments.py  melspecs.py  preprocess_EK_annotations.py  wav2vec.py
src/: compatibility.py  data.py  loss.py  main.py  train_epic_kitchen.py  util_simplified.py
src/configs/: config.yaml
