
[project]
name = "epic-kitchen-zsl"
version = "0.0.1"
description = "A development environment using devenv with uv."
requires-python = ">=3.11, <4.0.0"
dependencies = [
    "audmetric>=1.2.2",
    "audobject>=0.7.12",
    "hydra-core>=1.3.2",
    "librosa>=0.11.0",
    "omegaconf>=2.3.0",
    "pandas>=2.3.2",
    "panns-inference>=0.1.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.56.1",
]


[tool.uv]
dev-dependencies = ["ruff"]

[project.optional-dependencies]

